--- a/Gitea/TableViewCells/IssueTableViewCell.xib
+++ b/Gitea/TableViewCells/IssueTableViewCell.xib
@@ -21,59 +21,52 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mGQ-MA-hba">
                         <rect key="frame" x="8" y="6" width="32" height="32"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="mGQ-MA-hba" secondAttribute="height" multiplier="1:1" id="8i1-Hd-mh4"/>
-                            <constraint firstAttribute="width" constant="32" id="OC7-nF-WNw"/>
+                            <constraint firstAttribute="width" secondItem="mGQ-MA-hba" secondAttribute="height" multiplier="1:1" id="LIy-Sg-Gjs"/>
+                            <constraint firstAttribute="width" constant="32" id="vPZ-xs-Odp"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="CTW-D1-3JP">
-                        <rect key="frame" x="48" y="1" width="286" height="42"/>
+                        <rect key="frame" x="48" y="1" width="42" height="42"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="luu-gu-ZkE">
-                                <rect key="frame" x="0.0" y="0.0" width="286" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAn-nc-hbc">
-                                <rect key="frame" x="0.0" y="21.5" width="286" height="20.5"/>
+                                <rect key="frame" x="0.0" y="21.5" width="42" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="7wW-n1-ZIA"/>
+                        </constraints>
                     </stackView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z81-dl-HMX">
-                        <rect key="frame" x="342" y="6" width="32" height="32"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="evV-9M-biM">
+                        <rect key="frame" x="98" y="6" width="308" height="32"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="z81-dl-HMX" secondAttribute="height" multiplier="1:1" id="1Qc-zm-I5y"/>
-                            <constraint firstAttribute="width" constant="32" id="r8C-jV-iUB"/>
+                            <constraint firstAttribute="height" constant="32" id="Eo1-vS-nSo"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" id="LTx-HQ-bHu"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="evV-9M-biM">
-                        <rect key="frame" x="382" y="6" width="24" height="32"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="24" id="PLM-x0-iE3"/>
-                            <constraint firstAttribute="height" constant="32" id="WxN-Ra-sXY"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mGQ-MA-hba" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="4Fa-gc-ehV"/>
-                    <constraint firstItem="CTW-D1-3JP" firstAttribute="leading" secondItem="mGQ-MA-hba" secondAttribute="trailing" priority="750" constant="8" id="584-XU-mAw"/>
-                    <constraint firstItem="mGQ-MA-hba" firstAttribute="leading" secondItem="2m5-nX-3tP" secondAttribute="leading" priority="750" constant="8" id="9gv-2Y-AbK"/>
-                    <constraint firstItem="CTW-D1-3JP" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="IzW-ku-xYq"/>
-                    <constraint firstItem="evV-9M-biM" firstAttribute="leading" secondItem="z81-dl-HMX" secondAttribute="trailing" priority="750" constant="8" id="U1w-2X-x3g"/>
-                    <constraint firstItem="z81-dl-HMX" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="UF5-wO-8Or"/>
-                    <constraint firstItem="evV-9M-biM" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="ZI1-6e-V5c"/>
-                    <constraint firstItem="z81-dl-HMX" firstAttribute="leading" secondItem="CTW-D1-3JP" secondAttribute="trailing" priority="750" constant="8" id="bB3-Mo-xwy"/>
-                    <constraint firstAttribute="trailing" secondItem="evV-9M-biM" secondAttribute="trailing" priority="750" constant="8" id="eBI-D1-KIe"/>
+                    <constraint firstItem="mGQ-MA-hba" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="0UV-3T-ebG"/>
+                    <constraint firstItem="CTW-D1-3JP" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="4ou-Td-HRk"/>
+                    <constraint firstAttribute="trailing" secondItem="evV-9M-biM" secondAttribute="trailing" constant="8" id="HCN-Pp-Yir"/>
+                    <constraint firstItem="evV-9M-biM" firstAttribute="leading" secondItem="CTW-D1-3JP" secondAttribute="trailing" constant="8" id="LSh-lH-bxG"/>
+                    <constraint firstItem="mGQ-MA-hba" firstAttribute="leading" secondItem="2m5-nX-3tP" secondAttribute="leading" constant="8" id="ZEs-l4-bT2"/>
+                    <constraint firstItem="CTW-D1-3JP" firstAttribute="leading" secondItem="mGQ-MA-hba" secondAttribute="trailing" constant="8" id="pir-tQ-LIf"/>
+                    <constraint firstItem="evV-9M-biM" firstAttribute="centerY" secondItem="2m5-nX-3tP" secondAttribute="centerY" id="zPj-mg-lNU"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="commentsImage" destination="z81-dl-HMX" id="VqZ-Gd-5JL"/>
                 <outlet property="commentsLabel" destination="evV-9M-biM" id="nw3-kB-Doo"/>
                 <outlet property="footerLabel" destination="XAn-nc-hbc" id="k0R-NC-SCk"/>
                 <outlet property="titleLabel" destination="luu-gu-ZkE" id="JHA-z1-gn2"/>
