--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -157,10 +157,34 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="9eF-hu-uh1"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="jib-qu-D42">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NhK-73-JCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1770" y="569"/>
+        </scene>
+        <!--Pull Request Detail Table View Controller-->
+        <scene sceneID="hag-gg-3sB">
+            <objects>
+                <tableViewController id="4dD-ZW-DWx" customClass="PullRequestDetailTableViewController" customModule="Gitea" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="REg-SI-Osk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <connections>
+                            <outlet property="dataSource" destination="4dD-ZW-DWx" id="FTh-sh-UJ1"/>
+                            <outlet property="delegate" destination="4dD-ZW-DWx" id="yxa-8N-kdr"/>
+                        </connections>
+                    </tableView>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="cDF-zO-JOP">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9dT-Fb-5Po" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1770" y="1271"/>
         </scene>
         <!--Pull Requests Table View Controller-->
         <scene sceneID="sXQ-UF-cP7">
@@ -183,6 +207,9 @@
                             <action selector="refreshAction:" destination="uEu-xx-OTi" eventType="valueChanged" id="01o-0l-ape"/>
                         </connections>
                     </refreshControl>
+                    <connections>
+                        <segue destination="4dD-ZW-DWx" kind="show" identifier="ShowPullRequestDetail" id="oe6-RU-fr2"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IIJ-Bj-hNV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
