--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -158,7 +158,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="9eF-hu-uh1"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="jib-qu-D42">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="Gpx-e5-ahY" eventType="valueChanged" id="CCy-Y5-9Vv"/>
+                        </connections>
                     </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NhK-73-JCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -179,6 +183,7 @@
                         </connections>
                     </tableView>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="cDF-zO-JOP">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                 </tableViewController>
