--- a/Gitea/Base.lproj/Main.storyboard
+++ b/Gitea/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
         <!--Code Table View Controller-->
         <scene sceneID="RYb-hf-yhW">
             <objects>
-                <tableViewController id="QkG-YT-odX" customClass="CodeTableViewController" customModule="Gitea" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CodeTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QkG-YT-odX" customClass="CodeTableViewController" customModule="Gitea" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="u0G-Yf-HPv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
